<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07091D"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/forma"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_shapef_02"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:text="@string/somnium"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrandoText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="#E6E6E6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="109dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:text="@string/empezar"
        android:backgroundTint="@color/cshape2"
        app:layout_constraintBottom_toBottomOf="@+id/forma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.15" />

    <!--<LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/forma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnS"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cshape2"
            android:text="@string/salud"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnR"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cshape2"
            android:text="@string/resultados"
            android:textSize="17sp" />

    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>