<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SaludFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#07091D">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pulsoLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners_pulso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pulso_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/pulso_cardiaco"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_bpm"
                android:layout_width="86dp"
                android:layout_height="84dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/pulso_text"
                app:layout_constraintTop_toBottomOf="@+id/pulso_text"
                app:layout_constraintVertical_bias="0.304"
                app:srcCompat="@drawable/ic_monitor_heart_white_24dp" />

            <TextView
                android:id="@+id/bpmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="96 bpm"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/promedioText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.322"
                app:layout_constraintStart_toEndOf="@+id/pulso_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.625" />

            <TextView
                android:id="@+id/promedioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/promedio"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toEndOf="@+id/icon_bpm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/oxLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners_ox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pulsoLayout">

            <TextView
                android:id="@+id/ox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="Saturacion de O2"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_ox"
                android:layout_width="86dp"
                android:layout_height="84dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/ox_text"
                app:layout_constraintTop_toBottomOf="@+id/ox_text"
                app:layout_constraintVertical_bias="0.304"
                app:srcCompat="@drawable/ic_water_drop_white_24dp" />

            <TextView
                android:id="@+id/oxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="98%"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/promedioText2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.322"
                app:layout_constraintStart_toEndOf="@+id/ox_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.625" />

            <TextView
                android:id="@+id/promedioText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/promedio"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toEndOf="@+id/icon_ox" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resultadosMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oxLayout">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/tick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resultadosTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/normal_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toTopOf="@+id/image1" />

            <TextView
                android:id="@+id/resultadosDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_desc"
                android:textColor="#FFFFFF"
                android:layout_marginStart="82dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/resultadosTitle"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>